<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FriendPageActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/gradient_friend_title">

        <RelativeLayout
            android:id="@+id/friend_add_button"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/friend_add_button_bg">

            <View
                android:layout_width="5dp"
                android:layout_height="16dp"
                android:background="@color/white"
                android:layout_centerInParent="true"/>
            
            <View
                android:layout_width="16dp"
                android:layout_height="5dp"
                android:background="@color/white"
                android:layout_centerInParent="true"/>

        </RelativeLayout>
        
        <TextView
            android:id="@+id/friend_edit_button"
            android:layout_width="48dp"
            android:layout_height="36dp"
            android:background="@drawable/friend_edit_button_bg"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="sans"/>

        <com.oneplus.widget.MyTextView2
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/friend"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ListView
        android:id="@+id/friend_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/background">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/gradient_button_bg"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.oneplus.widget.MyTextView2
            android:id="@+id/friend_radar_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/page_button"
            android:gravity="center"
            android:text="@string/radar"
            android:textColor="@color/buttonGray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.oneplus.widget.MyTextView2
            android:id="@+id/friend_enemy_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/page_button"
            android:gravity="center"
            android:text="@string/enemy"
            android:textColor="@color/buttonRed"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
