<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.oneplus.myradar.MainActivity">

    <com.oneplus.widget.MyTextView1
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/gradient_button_bg"
        android:gravity="center"
        android:text="@string/radar"
        android:textColor="@color/titleGray"
        android:textSize="36sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3" />

            <com.oneplus.widget.Trapezoid
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="22" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3" />

        </LinearLayout>

        <com.oneplus.widget.MyRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerInParent="true">

            <com.baidu.mapapi.map.MapView
                android:id="@+id/bmapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:clickable="true" />

            <com.oneplus.widget.MyImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/radar_show" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2">
                
                <ImageView
                    android:id="@+id/scan_line"
                    android:layout_width="40dp"
                    android:layout_height="0dp"
                    android:background="@drawable/scan_line"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"/>
                
            </LinearLayout>

        </com.oneplus.widget.MyRelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3" />

            <com.oneplus.widget.Trapezoid2
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="22" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3" />

        </LinearLayout>

        <ImageView
            android:id="@+id/locate"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/locate_button_selector"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"/>

        <ImageView
            android:id="@+id/help"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/help_button_selector"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"/>

        <ImageView
            android:id="@+id/refresh"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/refresh_button_selector"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/gradient_button_bg"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.oneplus.widget.MyTextView2
            android:id="@+id/enemy_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/page_button"
            android:gravity="center"
            android:text="@string/enemy"
            android:textColor="@color/buttonRed"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.oneplus.widget.MyTextView2
            android:id="@+id/friend_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/page_button"
            android:gravity="center"
            android:text="@string/friend"
            android:textColor="@color/buttonGreen"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
